# DGFEM-CAA-GUI

./: .gitignore  CMakeLists.txt  README.md  build.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.json
src/: charts.h  fft.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
